[NewFeature]修复main显示错误、完成visit页绘制、修改头像组件

--- a/components/avatar-display/avatar-display.wxml
+++ b/components/avatar-display/avatar-display.wxml
@@ -1,5 +1,4 @@
-
 <view class="player-info">
   <image class="avatar" src="{{avatar}}" mode="widthFix"></image>
-  <view class="name">{{name}}</view>
+  <view class="name" style="border: {{isShowBorder?1:0}}px solid gray;">{{name}}</view>
 </view>
