--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,33 +1,32 @@
 <view class="background"/>
 <view class="content">
- <view class="page">
-   <view class="player-info">
-     <gold-level-display gold="50000" level="99" expRate="0.2333"/>
-     <image class="avatar" src="../../images/avatar.jpeg"
-            mode="aspectFill" bind:tap="onAvatarTap"/>
-     <text class="name">测试君</text>
-     <text class="slogan">好好学习加油买房！</text>
-   </view>
-  <scroll-view class="room-list" scroll-y="{{true}}" >
-    <text class="label">我的收藏</text>
-    <view wx:for="{{collectedRooms}}" class="room-card">
-      <image class="room" src="../../assets/common/3.png" mode="heightFix"></image>
-      <view class="info">
-        <text class="user">测试君｜3</text>
-        <text class="name">摆烂小屋</text>
-      </view>
-      <view class="enter-tips">
-        <text>进入房间</text>
-        <image class="enter" src="../../images/enter.png"></image>
-      </view>
-      <image class="star" src="../../images/star.png"></image>
+  <view class="page">
+    <view class="player-info">
+      <gold-level-display gold="50000" level="99" expRate="0.2333"/>
+      <image class="avatar" src="../../images/avatar.jpeg"
+      mode="aspectFill" bind:tap="onAvatarTap"/>
+      <text class="name">测试君</text>
+      <text class="slogan">好好学习加油买房！</text>
     </view>
-  </scroll-view>
- </view>
+    <scroll-view class="room-list" scroll-y="{{true}}" >
+      <text class="label">我的收藏</text>
+      <view wx:for="{{collectedRooms}}" class="room-card">
+        <image class="room" src="../../assets/common/3.png" mode="heightFix"></image>
+        <view class="info">
+          <text class="user">{{item.userName}}|{{item.level}}</text>
+          <text class="name">{{item.name}}</text>
+        </view>
+        <view class="enter-tips">
+          <text>进入房间</text>
+          <image class="enter" src="../../images/enter.png"></image>
+        </view>
+        <image class="star" src="../../images/star.png"></image>
+      </view>
+    </scroll-view>
+  </view>
 </view>
 
-<van-popup show="{{isEdit}}" round bind:close="onClose"
-           custom-class="popup">
+<van-popup show="{{isEdit}}" round bind:close="onClose" custom-class="popup">
   <view class="popup-content">
     <image class="avatar" src="../../images/avatar.jpeg" mode="aspectFill"/>
     <input class="name" value="测试君"></input>
