--- a/pages/shop/shop.less
+++ b/pages/shop/shop.less
@@ -6,97 +6,95 @@
   display: flex;
   flex-direction: column;
   background: -webkit-linear-gradient(top, #C7E1FA, #4F8DCC);
-}
-.room{
-  image{
-padding-left: 8vw;
-margin-top: 5vh;
+  .room{
+    padding-left: 8vw;
+    margin-top: 5vh;
+  }
+  .column{
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    top: 766rpx;
+    .box1 {
+      width: 107rpx;
+      height: 39rpx;
+      flex-direction: row;
+      display: flex;
+      justify-content: space-between;
+      margin: 12rpx 0 0 30rpx;
+    }
+    .coins {
+      width: 28rpx;
+      height: 25rpx;
+      margin-top: 7rpx;
+    }
+    .coinsText {
+      width: 68rpx;
+      height: 39rpx;
+      color: rgba(0,0,0,1);
+      font-size: 28rpx;
+      text-align: left;
+    }
+  }
+  .return{
+    width: 144rpx;
+    height: 51rpx;
+    flex-direction: row;
+    display: flex;
+    justify-content: space-between;
+    margin: 7rpx 0 0 49rpx;
+  }
+  .sum {
+    height: 65rpx;
+    border-radius: 16rpx;
+    background-color: rgba(255,255,255,1);
+    display: flex;
+    flex-direction: column;
+    width: 165rpx;
+    margin-left: 260rpx;
+  }
+  .back{
+    padding-left: 4vw;
+  }
+  .choose {
+    position: absolute;
+    left: 0rpx;
+    top: 825rpx;
+    width: 750rpx;
+    height: 91rpx;
+    .rooms {
+      height: 63rpx;
+      border-radius: 26rpx;
+      background-color: rgba(255,255,255,1);
+      width: 121rpx;
+      position: absolute;
+      left: 53rpx;
+      top: 28rpx;
+      text-align: center;
+      text{
+        font-size: 28rpx;
+        position: relative;
+        top: 0.35vh;
+      }
+    }
+    .others {
+      height: 63rpx;
+      border-radius: 26rpx;
+      background-color: rgba(255,255,255,0.5);
+      width: 121rpx;
+      position: absolute;
+      left: 209rpx;
+      top: 28rpx;
+      text-align: center;
+      text{
+        font-size: 28rpx;
+        position: relative;
+        top: 0.35vh;
+      }
+    }
   }
 }
-.column{
-  display: flex;
-  flex-direction: row;
-  position: absolute;
-  top: 766rpx;
-}
-.return{
-  width: 144rpx;
-  height: 51rpx;
-  flex-direction: row;
-  display: flex;
-  justify-content: space-between;
-  margin: 7rpx 0 0 49rpx;
-}
-.sum {
-  height: 65rpx;
-  border-radius: 16rpx;
-  background-color: rgba(255,255,255,1);
-  display: flex;
-  flex-direction: column;
-  width: 165rpx;
-  margin-left: 260rpx;
-}
-.box1 {
-  width: 107rpx;
-  height: 39rpx;
-  flex-direction: row;
-  display: flex;
-  justify-content: space-between;
-  margin: 12rpx 0 0 30rpx;
-}
-.coins {
-  width: 28rpx;
-  height: 25rpx;
-  margin-top: 7rpx;
-}
-.coinsText {
-  width: 68rpx;
-  height: 39rpx;
-  color: rgba(0,0,0,1);
-  font-size: 28rpx;
-  text-align: left;
-}
-.back{
-  padding-left: 4vw;
-}
-.choose {
-  position: absolute;
-  left: 0rpx;
-  top: 825rpx;
-  width: 750rpx;
-  height: 91rpx;
-}
-.rooms {
-  height: 63rpx;
-  border-radius: 26rpx;
-  background-color: rgba(255,255,255,1);
-  width: 121rpx;
-  position: absolute;
-  left: 53rpx;
-  top: 28rpx;
-  text-align: center;
-  text{
-    font-size: 28rpx;
-    position: relative;
-    top: 0.35vh;
-  }
-}
-.others {
-  height: 63rpx;
-  border-radius: 26rpx;
-  background-color: rgba(255,255,255,0.5);
-  width: 121rpx;
-  position: absolute;
-  left: 209rpx;
-  top: 28rpx;
-  text-align: center;
-  text{
-    font-size: 28rpx;
-    position: relative;
-    top: 0.35vh;
-  }
-}
-.Detail {
+.Shelf {
   height: 50vh;
   background-color: rgba(0,0,0,0.29);
   display: flex;
@@ -104,307 +102,135 @@ margin-top: 5vh;
   width: 100%;
   position: absolute;
   top: 56.5vh;
-}
-.shelf {
-  width: 90%;
-  height: 647rpx;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin: 47rpx 0 0 51rpx;
-}
-.roomsDetail {
-  flex-wrap: wrap;
-  display: flex;
-  flex-direction: row;
-}
-.mod1-0 {
-  height: 216rpx;
-  border-radius: 16rpx;
-  display: flex;
-  flex-direction: column;
-  width: 186rpx;
-  position: relative;
-  margin: 0 46rpx 30rpx 0;
-  background: rgba(255,255,255,1);
-  .outer {
-    width: 100%;
-    height: 80%;
+  .Detail {
+    width: 95%;
+    height: 647rpx;
     display: flex;
     flex-direction: column;
-    padding:5rpx 0 0 8rpx;
-    image{
-      width: 23vw;
+    justify-content: space-between;
+    margin-left: 6.8vw;
+    margin-top: 2vh;
+    .roomsDetail {
+      flex-wrap: wrap;
+      display: flex;
+      flex-direction: row;
+      .rooms {
+        height: 216rpx;
+        border-radius: 16rpx;
+        display: flex;
+        flex-direction: column;
+        width: 186rpx;
+        position: relative;
+        margin-bottom: 2vh;
+        background: rgba(255,255,255,1);
+        margin-right: 6.2vw;
+        .roomImg {
+          margin:5rpx 0 0 8rpx;
+          width: 23.5vw;
+          height: 25vw;
+        }
+        .tap1{
+          margin-left: auto;
+          margin-right: auto;
+          position: relative;
+          bottom: 0.5vh;
+          font-size: 25rpx;
+          color: white;
+        }
+       .tap2{
+          margin-left: auto;
+          margin-right: auto;
+          position: relative;
+          bottom: 0.5vh;
+          font-size: 25rpx;
+        }
+      .priceBox {
+        width: 90rpx;
+        height: 25rpx;
+        flex-direction: row;
+        display: flex;
+        justify-content: space-between;
+        margin-left: auto;
+        margin-right: auto;
+        position: absolute;
+        top: 11vh;
+        left: 6vw;
+        .price {
+          color: rgba(0,0,0,1);
+          font-size: 28rpx;
+          text-align: left;
+          position: relative;
+          bottom: 0.3vh;
+        }
+      }
+      .unlock{
+        position: relative;
+        bottom: 6vh;
+        padding-left: 1vw;
+        width: 170rpx;
+        height: 35rpx;
+        color: rgba(255,255,255,1);
+        font-size: 25rpx;
+        text-align: left;
+      }
+      }
     }
-}
-.tap{
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-  bottom: 1vh;
-}
-.tapText {
-  font-size: 25rpx;
-  color: rgba(0,0,0,1);
-}
-}
-.mod1-1 {
-  height: 216rpx;
-  border-radius: 16rpx;
-  display: flex;
-  flex-direction: column;
-  width: 186rpx;
-  position: relative;
-  margin: 0 46rpx 30rpx 0;
-  background: rgba(0,0,0,0.46);
-  .outer {
-    width: 100%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    padding:5rpx 0 0 8rpx;
-    text-align: center;
-    image{
-      width: 23vw;
+    .othersDetail{
+      flex-wrap: wrap;
+      display: flex;
+      flex-direction: row;
+      .others{
+        height: 216rpx;
+        border-radius: 16rpx;
+        display: flex;
+        flex-direction: column;
+        width: 186rpx;
+        position: relative;
+        margin-bottom: 2vh;
+        background: rgba(255,255,255,1);
+        margin-right: 6.2vw;
+        .roomImg {
+          margin:5rpx 0 0 8rpx;
+          width: 23.5vw;
+          height: 25vw;
+        }
+        .tap2{
+          margin-left: auto;
+          margin-right: auto;
+          position: relative;
+          bottom: 0.5vh;
+          font-size: 25rpx;
+        }
+        .priceBox {
+          width: 90rpx;
+          height: 25rpx;
+          flex-direction: row;
+          display: flex;
+          justify-content: space-between;
+          margin-left: auto;
+          margin-right: auto;
+          position: absolute;
+          top: 11vh;
+          left: 6vw;
+        .price {
+          color: rgba(0,0,0,1);
+          font-size: 28rpx;
+          text-align: left;
+          position: relative;
+          bottom: 0.3vh;
+        }
+      }
+      .unlock{
+        position: relative;
+        bottom: 6vh;
+        padding-left: 1vw;
+        width: 170rpx;
+        height: 35rpx;
+        color: rgba(255,255,255,1);
+        font-size: 25rpx;
+        text-align: left;
+      }
     }
-  }
-  .tap{
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    bottom: 1vh;
-  }
-  .using {
-    font-size: 25rpx;
-    color: rgba(255,255,255,1);
-  }
-}
-.mod1-2 {
-  height: 216rpx;
-  border-radius: 16rpx;
-  display: flex;
-  flex-direction: column;
-  width: 186rpx;
-  background: rgba(255,255,255,1);
-  .outer {
-    width: 100%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    padding:5rpx 0 0 8rpx;
-    image{
-      width: 23vw;
-    }
-  }
-}
-.priceBox {
-  width: 90rpx;
-  height: 25rpx;
-  flex-direction: row;
-  display: flex;
-  justify-content: space-between;
-  margin-left: auto;
-  margin-right: auto;
-}
-.price {
-  color: rgba(0,0,0,1);
-  font-size: 28rpx;
-  text-align: left;
-  position: relative;
-  bottom: 0.3vh;
-}
-.mod1-3 {
-  opacity: 0.8;
-  height: 216rpx;
-  border-radius: 16rpx;
-  display: flex;
-  flex-direction: column;
-  width: 186rpx;
-  position: relative;
-  margin: 0 46rpx 30rpx 0;
-  background: rgba(255,255,255,0.7);
-  .outer {
-    width: 100%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    padding:5rpx 0 0 8rpx;
-    image{
-      // filter: blur(80%);
-      width: 23vw;
-    }
-}
-}
-.unlock {
-  position: absolute;
-  left: 18rpx;
-  top: 91rpx;
-  width: 160rpx;
-  height: 35rpx;
-  color: rgba(255,255,255,1);
-  font-size: 25rpx;
-  text-align: left;
-}
-.mod1-4 {
-  opacity: 0.8;
-  height: 216rpx;
-  border-radius: 16rpx;
-  display: flex;
-  flex-direction: column;
-  width: 186rpx;
-  position: relative;
-  margin: 0 46rpx 30rpx 0;
-  margin-bottom: 0rpx;
-  background: rgba(255,255,255,0.7);
-  .outer {
-    width: 100%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    padding:5rpx 0 0 8rpx;
-    image{
-      // filter: blur(1px);
-      width: 23vw;
-    }
-}
-}
-.othersDetail{
-  // height: 461rpx;
-  flex-wrap: wrap;
-  display: flex;
-  flex-direction: row;
-}
-.mod2-0 {
-  height: 216rpx;
-  border-radius: 16rpx;
-  display: flex;
-  flex-direction: column;
-  width: 186rpx;
-  position: relative;
-  margin: 0 46rpx 30rpx 0;
-  background: rgba(255,255,255,1);
-  .outer {
-    width: 100%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    padding:5rpx 0 0 8rpx;
-    image{
-      width: 23vw;
-    }
-}
-.tap{
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-  bottom: 1vh;
-}
-.tapText {
-  font-size: 25rpx;
-  color: rgba(0,0,0,1);
-}
-}
-.mod2-1 {
-  height: 216rpx;
-  border-radius: 16rpx;
-  display: flex;
-  flex-direction: column;
-  width: 186rpx;
-  position: relative;
-  margin: 0 46rpx 30rpx 0;
-  background: rgba(255,255,255,1);
-  .outer {
-    width: 100%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    padding:5rpx 0 0 8rpx;
-    text-align: center;
-    image{
-      width: 23vw;
     }
   }
-  .tap{
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    bottom: 1vh;
-  }
-  .using {
-    font-size: 25rpx;
-    color: rgba(0,0,0,1);
-  }
-}
-.mod2-2 {
-  height: 216rpx;
-  border-radius: 16rpx;
-  display: flex;
-  flex-direction: column;
-  width: 186rpx;
-  background: rgba(255,255,255,1);
-  .outer {
-    width: 100%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    padding:5rpx 0 0 8rpx;
-    image{
-      width: 23vw;
-    }
-  }
-  .tap{
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    bottom: 1vh;
-  }
-  .using {
-    font-size: 25rpx;
-    color: rgba(0,0,0,1);
-  }
-}
-.mod2-3 {
-  opacity: 0.8;
-  height: 216rpx;
-  border-radius: 16rpx;
-  display: flex;
-  flex-direction: column;
-  width: 186rpx;
-  position: relative;
-  margin: 0 46rpx 30rpx 0;
-  background: rgba(255,255,255,0.7);
-  .outer {
-    width: 100%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    padding:5rpx 0 0 8rpx;
-    image{
-      // filter: blur(80%);
-      width: 23vw;
-    }
-}
-}
-.mod2-4 {
-  opacity: 0.8;
-  height: 216rpx;
-  border-radius: 16rpx;
-  display: flex;
-  flex-direction: column;
-  width: 186rpx;
-  position: relative;
-  margin: 0 46rpx 30rpx 0;
-  margin-bottom: 0rpx;
-  background: rgba(255,255,255,0.7);
-  .outer {
-    width: 100%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    padding:5rpx 0 0 8rpx;
-    image{
-      // filter: blur(1px);
-      width: 23vw;
-    }
-}
 }
