--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -1,39 +1,86 @@
 <!--square.wxml-->
 <view class="container">
-  <view class="page">
-    <view class="logo-container" >
-      <image class="logo{{isNewer?'-small':''}}" src="../../images/logo.png"></image>
-      <view class="homi" wx:if="{{!isNewer}}">
+  <view class="login-page {{isLogin ? 'is-login' : ''}}" >
+    <view class="logo-container">
+      <image class="logo" src="../../images/logo.png"></image>
+      <view class="homi">
         <text class="homi-text">HOMI</text>
       </view>
     </view>
-    <view class="avatar-container" wx:if="{{isNewer}}">
-      <image class="avatar" src="../../images/avatar.jpeg" mode="aspectFill"></image>
-    </view>
-    <view class="name-container" wx:if="{{isNewer}}">
-      <view class="name">
-        <input class="name-input" placeholder="测试君"/>
-      </view>
-    </view>
-    <view class="gender-container" wx:if="{{isNewer}}">
-      <view class="male">
-        <text class="gender-text">男</text>
-      </view>
-      <view class="female">
-        <text class="gender-text">女</text>
-      </view>
-    </view>
-    <view class="slogan-container" wx:if="{{isNewer}}">
-      <textarea class="slogan" placeholder="好好学习加油买房!"
-                adjust-position="{{false}}" focus="{{false}}"
-                maxlength="50" cursor-spacing="10"/>
-    </view>
-    <view class="login-block{{isNewer?'-small':''}}">
-      <view class="login{{isNewer?'':'-small'}}">
-        <button class="login-button" wx:if="{{!isNewer}}"
-                bindtap="tapToLogin">请使用微信登录</button>
-        <text class="login-text" wx:if="{{isNewer}}">完成</text>
-      </view>
+    <view class="login-block">
+      <text class="tips">点击进入元宇宙</text>
+      <button class="button {{isLogin ? 'is-login' : ''}}"
+              bindtap="tapToLogin">
+        <view class="effect"/>
+      </button>
     </view>
   </view>
+  
+  <view class="register-page" wx:if="{{isNewer}}">
+    <view class="avatar-container">
+      <view class="effect"/>
+      <image class="avatar" src="{{info.avatarUrl}}" mode="aspectFill"/>
+    </view>
+    <view class="name-container">
+      <view class="name">
+        <input class="name-input" placeholder="输入你的游戏昵称"
+               maxlength="8"
+               value="{{info.name}}" bind:input="onNameInput"/>
+      </view>
+    </view>
+    <view class="gender-container">
+      <view class="gender-box male {{info.gender == 1 ? 'selected' : ''}}"
+            bind:tap="onMaleTap">男</view>
+      <view class="gender-box female {{info.gender == 2 ? 'selected' : ''}}"
+            bind:tap="onFemaleTap">女</view>
+    </view>
+    <view class="slogan-container">
+      <textarea class="slogan" placeholder="输入你的Slogan吧！"
+                adjust-position="{{false}}" focus="{{false}}"
+                maxlength="50" cursor-spacing="10"
+                bind:input="onSloganInput"/>
+    </view>
+    <view class="submit" bind:tap="onSubmit">完成</view>
+  </view>
+  
+  <!--  -->
+<!--  <view class="page">-->
+<!--    <view class="logo-container">-->
+<!--      <image class="logo{{isNewer?'-small':''}}" src="../../images/logo.png"></image>-->
+<!--      <view class="homi" wx:if="{{!isNewer}}">-->
+<!--        <text class="homi-text">HOMI</text>-->
+<!--      </view>-->
+<!--    </view>-->
+<!--    <view class="avatar-container" wx:if="{{isNewer}}">-->
+<!--      <image class="avatar" src="../../images/avatar.jpeg" mode="aspectFill"></image>-->
+<!--    </view>-->
+<!--    <view class="name-container" wx:if="{{isNewer}}">-->
+<!--      <view class="name">-->
+<!--        <input class="name-input" placeholder="测试君"/>-->
+<!--      </view>-->
+<!--    </view>-->
+<!--    <view class="gender-container" wx:if="{{isNewer}}">-->
+<!--      <view class="male">-->
+<!--        <text class="gender-text">男</text>-->
+<!--      </view>-->
+<!--      <view class="female">-->
+<!--        <text class="gender-text">女</text>-->
+<!--      </view>-->
+<!--    </view>-->
+<!--    <view class="slogan-container" wx:if="{{isNewer}}">-->
+<!--      <textarea class="slogan" placeholder="好好学习加油买房!"-->
+<!--                adjust-position="{{false}}" focus="{{false}}"-->
+<!--                maxlength="50" cursor-spacing="10"/>-->
+<!--    </view>-->
+<!--    <view class="login-block{{isNewer?'-small':''}}">-->
+<!--      <view class="login{{isNewer?'':'-small'}}">-->
+<!--        点击进入元宇宙-->
+<!--        <button class="login-button" wx:if="{{!isNewer}}"-->
+<!--                bindtap="tapToLogin">-->
+<!--          <view class="effect"/>-->
+<!--        </button>-->
+<!--        <text class="login-text" wx:if="{{isNewer}}">完成</text>-->
+<!--      </view>-->
+<!--    </view>-->
+<!--  </view>-->
 </view>
